<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:id="@+id/relativeImageUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="15dp"
        >

        <RelativeLayout
            android:id="@+id/imaUser"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="120dp"
                android:layout_margin="10dp"
                android:padding="3dp"
                android:layout_height="120dp"
                android:src="@drawable/user"
                android:background="@drawable/circle"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imaUser"
            android:layout_centerHorizontal="true"
            android:text="@string/gitesh_shastri"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_centerHorizontal="true"
            android:text="@string/giteshshastri96_gmail_com"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeImageUser"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10k"
                    android:textSize="26sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-light"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textAllCaps="true"
                    android:textSize="13sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-light"
                    />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#E19C2B2D">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2k"
                    android:textSize="26sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-light"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textAllCaps="true"
                    android:textSize="13sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-light"
                    />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>